# Yakudatsu

./: Cargo.toml  Makefile  README.md  kanji_strokes
src/: kanji_search.rs  main.rs  sentence_search.rs  word_search.rs
