[package]
name = "Yakudatsu"
description = "A cli multi-tool for japanese. Forked from https://github.com/JojiiOfficial/jisho-cli"
version = "1.0.1"
authors = ["jojii <jojii@gmx.net>", "Hiers <dvmap@protonmail.com"]
readme = "README.md"
repository = "https://github.com/Hiers/Yakudatsu"
license = "GPL-3.0"
edition = "2021"

[[bin]]
name = "ykdt"
path = "src/main.rs"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52.0", features = ["Win32_Foundation", "Win32_System_Console", "Win32_UI_Shell"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2.151"

[dependencies]
ureq = { version = "2.8.0", features = ["json"] }
serde_json = "1.0.108"
argparse = "0.2.2"
atty = "0.2.14"
kradical_parsing = "0.1.0"

[features]

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
strip = true
